# pledge-ex

./: .gitignore  LICENSE  README.md  c-pledge.c
c/: Makefile  pledge.c  sys.h  sys_linux.c  sys_openbsd.c
go/: main.go  openbsd.go
go/pledge/: main.go  openbsd.go
haskell/: CHANGELOG.md  pledge.cabal
haskell/app/: Main.hs
haskell/src/: Lib.hs
haskell/test/: Spec.hs
